# Delivery_Drone_ROS2

./: README.md
src/delivery/: package.xml  setup.cfg  setup.py
src/delivery/delivery/: commande_node.py  confirmation_livraison_node.py  suivi_livraison_node.py
src/drone_simulation/: CMakeLists.txt  package.xml
src/drone_simulation/config/: drone_params.yaml
src/drone_simulation/launch/: simulation.launch.py
src/drone_simulation/worlds/: delivery_world.sdf
src/navigation/: CMakeLists.txt  package.xml  setup.py
src/navigation/navigation/: obstacle_avoider_node.py  path_generator_node.py  path_generator_node_withoutSrv.py
src/power_management/: package.xml  setup.py
src/power_management/power_management/: __init__.py  battery_monitor.py  emergency_handler.py  return_to_base_server.py
